--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "serve:dev": "cross-env NODE_ENV=dev node server.js",
     "serve:prod": "cross-env NODE_ENV=prod node server.js",
     "prepare": "tsc --outDir module_dist src/client/index.ts --lib DOM,ES6 --declaration --target ES2017 --module commonjs",
-    "build:demo": "npm run build && cd ./src/demo && npm run build"
+    "build:demo": "npm run build && cd ./src/demo && npm install && npm run build"
   },
   "repository": {
     "type": "git",
