--- a/package.json
+++ b/package.json
@@ -47,14 +47,21 @@
     "cross-env": "^5.1.4",
     "css-loader": "^0.28.11",
     "cucumber": "^4.0.0",
+    "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
     "fs": "0.0.1-security",
     "gts": "^0.5.4",
     "jest": "^22.4.2",
     "jquery": "^3.3.1",
+    "moment": "^2.22.1",
+    "npm": "^5.7.1",
+    "openfin-launcher": "^1.4.2",
+    "openfin-layouts": "^0.0.2",
+    "path": "^0.12.7",
     "pre-commit": "^1.2.2",
     "prettier": "^1.11.1",
+    "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.20.3",
@@ -64,13 +71,7 @@
     "typescript": "^2.7.2",
     "url-loader": "^1.0.1",
     "webpack": "3.10.0",
-    "webpack-cli": "^2.0.13",
-    "express": "^4.16.2",
-    "moment": "^2.22.1",
-    "npm": "^5.7.1",
-    "openfin-launcher": "^1.4.2",
-    "path": "^0.12.7",
-    "react": "^16.2.0"
+    "webpack-cli": "^2.0.13"
   },
   "pre-commit": [
     "lint"
