add webpack copy plugin and refine webpack config a bit

--- a/package.json
+++ b/package.json
@@ -9,10 +9,7 @@
     "lint": "tslint --project . -t codeFrame",
     "lint:fix": "tslint --project . -t codeFrame --fix",
     "clean": "gts clean",
-    "webpack": "webpack",
-    "stage": "cp -R ./src/ui ./dist/ && cp -R ./src/demo ./dist/ && cp ./src/app.json ./dist/ && cp ./src/index.html ./dist/",
-    "build": "npm run webpack && npm run stage",
-    "deploy": "node deploy.js",
+    "build": "webpack",
     "start": "npm run start:dev",
     "start:dev": "npm run build:demo && npm run serve:dev",
     "start:prod": "npm run build && npm run serve:prod",
@@ -44,6 +41,7 @@
     "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "copy-webpack-plugin": "^4.5.1",
     "cross-env": "^5.1.4",
     "css-loader": "^0.28.11",
     "cucumber": "^4.0.0",
