convert demo to typescript, import client from ../client (rather than NPM), clean lint

--- a/src/app.template.json
+++ b/src/app.template.json
@@ -5,7 +5,7 @@
         "description": "OpenFin Notifications Desktop Service",
         "url": "https://cdn.openfin.co/services/openfin/notifications/index.html",
         "uuid": "notifications",
-        "autoShow": false,
+        "autoShow": true,
         "showTaskbarIcon": false,
         "defaultHeight": 400,
         "defaultWidth": 500
