--- a/package.json
+++ b/package.json
@@ -5,19 +5,14 @@
   "main": "module_dist/client/index.js",
   "types": "module_dist/client/index.d.ts",
   "scripts": {
-    "test": "jest",
-    "lint": "tslint --project . -t codeFrame",
-    "lint:fix": "tslint --project . -t codeFrame --fix",
+    "test": "jest && npm run lint",
+    "check": "gts check",
+    "fix": "gts fix",
     "clean": "gts clean",
-    "build": "webpack",
-    "start": "npm run start:dev",
-    "start:dev": "npm run build:demo && npm run serve:dev",
-    "start:prod": "npm run build && npm run serve:prod",
-    "serve": "npm run serve:dev",
-    "serve:dev": "cross-env NODE_ENV=dev node server.js",
-    "serve:prod": "cross-env NODE_ENV=prod node server.js",
-    "prepare": "tsc --outDir module_dist src/client/index.ts --lib DOM,ES6 --declaration --target ES2017 --module commonjs",
-    "build:demo": "npm run build && cd ./src/demo && npm install && npm run build"
+    "build": "webpack --mode production",
+    "build:demo": "webpack --mode development && cd ./src/demo && npm install && npm run build",
+    "start": "node server.js",
+    "prepare": "tsc --outDir module_dist src/client/index.ts --lib DOM,ES6 --declaration --target ES2017 --module commonjs"
   },
   "repository": {
     "type": "git",
@@ -38,42 +33,29 @@
     "@types/openfin": "^17.0.4",
     "@types/react": "^16.3.12",
     "@types/react-dom": "^16.0.5",
-    "babel-loader": "^7.1.4",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
     "copy-webpack-plugin": "^4.5.1",
-    "cross-env": "^5.1.4",
-    "css-loader": "^0.28.11",
+    "css-loader": "^1.0.0",
     "cucumber": "^4.0.0",
     "express": "^4.16.2",
-    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
     "fs": "0.0.1-security",
-    "gts": "^0.5.4",
+    "gts": "^0.8.0",
+    "hadouken-js-adapter": "^0.32.1-alpha.5",
     "jest": "^22.4.2",
-    "jquery": "^3.3.1",
+    "mini-css-extract-plugin": "^0.4.1",
     "moment": "^2.22.1",
-    "npm": "^5.7.1",
-    "openfin-launcher": "^1.4.2",
     "openfin-layouts": "^0.0.2",
-    "path": "^0.12.7",
-    "pre-commit": "^1.2.2",
-    "prettier": "^1.11.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "source-map-loader": "^0.2.3",
-    "style-loader": "^0.20.3",
+    "style-loader": "^0.21.0",
     "ts-jest": "^22.4.1",
-    "ts-loader": "^3.5.0",
-    "tslint": "^5.9.1",
+    "ts-loader": "^4.4.2",
     "typescript": "^2.7.2",
     "url-loader": "^1.0.1",
-    "webpack": "3.10.0",
-    "webpack-cli": "^2.0.13"
+    "webpack": "^4.16.1",
+    "webpack-cli": "^3.0.8"
   },
-  "pre-commit": [
-    "lint"
-  ],
   "jest": {
     "verbose": true,
     "moduleFileExtensions": [
