--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,21 +6,12 @@
         "jsx": "react",
         "declaration": false,
         "strict": false,
-        "lib": [
-            "es2016",
-            "dom"
-        ],
-        "types": [
-            "node",
-            "openfin",
-            "jest"
-        ]
+        "lib": ["es2016", "dom"],
+        "types": ["node", "openfin", "jest"]
     },
     "include": [
         "src/*.ts",
-        "src/*.tsx",
         "src/**/*.ts",
-        "src/**/*.tsx",
         "test/*.ts",
         "test/**/*.ts"
     ]
