--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "module_dist/client/index.js",
   "types": "module_dist/client/index.d.ts",
   "scripts": {
-    "test": "jest && npm run check",
+    "test": "jest",
     "check": "gts check",
     "fix": "gts fix",
     "clean": "gts clean",
