--- a/package.json
+++ b/package.json
@@ -2,20 +2,25 @@
   "name": "openfin-notifications",
   "version": "0.0.4",
   "description": "",
-  "main": "module_dist/client/index.js",
-  "types": "module_dist/client/index.d.ts",
+  "main": "dist/client/index.js",
+  "types": "dist/client/index.d.ts",
   "scripts": {
     "test": "jest",
     "check": "gts check",
     "fix": "gts fix",
-    "clean": "gts clean",
-    "build": "webpack --mode production",
-    "build:demo": "webpack --mode development && cd ./src/demo && npm install && npm run build",
-    "start": "node server.js",
-    "prepare": "tsc --outDir module_dist src/client/index.ts --lib DOM,ES6 --declaration --target ES2017 --module commonjs",
-    "compile": "tsc -p .",
+    "clean": "gts clean && rimraf dist staging",
+    "compile": "npm run compile:client && npm run compile:provider",
+    "compile:client": "tsc -p tsconfig.client.json && genversion dist/client/version.js",
+    "compile:provider": "tsc -p tsconfig.provider.json",
+    "prepare": "npm run compile",
     "pretest": "npm run compile",
-    "posttest": "npm run check"
+    "posttest": "npm run check",
+    "package": "webpack",
+    "build": "npm run compile && npm run package",
+    "build:demo": "npm run build:demo:prep && npm run build:demo:package",
+    "build:demo:prep": "npm run build && node mockDistDir.js",
+    "build:demo:package": "cd ./src/demo && npm i && npm run build",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -42,6 +47,7 @@
     "express": "^4.16.2",
     "file-loader": "^1.1.11",
     "fs": "0.0.1-security",
+    "genversion": "^2.1.0",
     "gts": "^0.8.0",
     "hadouken-js-adapter": "^0.32.1-alpha.5",
     "jest": "^22.4.2",
@@ -50,6 +56,7 @@
     "openfin-layouts": "^0.0.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "rimraf": "^2.6.2",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.21.0",
     "ts-jest": "^22.4.1",
