--- a/.npmignore
+++ b/.npmignore
@@ -1,9 +1,14 @@
-# standard ignores
-node_modules/
 # ignore everything
+
 *
 */**
-# override above and  files
-!module_dist/*
-!module_dist/**/*
-!package.json
+
+# except the dist dir where we've staged all the npm stuff
+
+!dist/*
+!dist/**/*
+
+# ensure we don't upload the mocked package.json (in case the demo was built)
+
+dist/package.json
+
