improve version logic, target es2017, add rvm managed logging, update service name/uuid, fix runtime args

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
         "declaration": false,
         "strict": false,
         "lib": ["es2016", "dom"],
-        "types": ["node", "openfin", "jest"]
+        "types": ["node", "openfin", "jest"],
+        "target": "es2017"
     },
     "include": [
         "src/client/index.ts",
