--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "fix": "gts fix",
     "clean": "gts clean && rimraf dist staging",
     "compile": "npm run compile:client && npm run compile:provider",
-    "compile:client": "tsc -p tsconfig.client.json && genversion dist/client/version.js",
+    "compile:client": "genversion --es6 --semi src/client/version.ts && tsc -p tsconfig.client.json",
     "compile:provider": "tsc -p tsconfig.provider.json",
     "prepare": "npm run compile",
     "pretest": "npm run compile",
