--- a/src/app.template.json
+++ b/src/app.template.json
@@ -1,17 +1,21 @@
 {
     "devtools_port": 9090,
     "startup_app": {
-        "name": "notifications",
+        "name": "Notifications-Service",
         "description": "OpenFin Notifications Desktop Service",
         "url": "https://cdn.openfin.co/services/openfin/notifications/index.html",
-        "uuid": "notifications",
+        "uuid": "notifications-service",
         "autoShow": true,
         "showTaskbarIcon": false,
         "defaultHeight": 400,
-        "defaultWidth": 500
+        "defaultWidth": 500,
+        "enableAppLogging": true,
+        "logManagement": {
+            "enabled": true
+        }
     },
     "runtime": {
-        "arguments": "--v=1 --enable-crash-reporting",
+        "arguments": "--enable-aggressive-domstorage-flushing",
         "version": "9.61.33.32"
     }
 }
