upgrade runtime to v2 api and cleanup some types (#23)
* upgrade runtime to v2 api and cleanup some types

* update to 0.9.2 of layouts

* a little cleanup, add typedoc

* bump version to 0.9.2 to match layouts

* PR feedback

* update readme

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,11 +7,11 @@
         "declaration": false,
         "strict": false,
         "lib": ["es2016", "dom"],
-        "types": ["node", "openfin", "jest"],
         "target": "es2017"
     },
     "include": [
         "src/client/index.ts",
+        "src/ui/index.ts",
         "src/provider/index.ts"
     ]
 }
