--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "gts": "^0.8.0",
     "hadouken-js-adapter": "^0.35.1-alpha.2",
     "jest": "^22.4.2",
+    "jest-util": "^23.4.0",
     "mini-css-extract-plugin": "^0.4.1",
     "moment": "^2.22.1",
     "react": "^16.2.0",
@@ -69,6 +70,7 @@
   },
   "jest": {
     "verbose": true,
+    "testURL": "http://localhost",
     "moduleFileExtensions": [
       "ts",
       "js"
