--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "homepage": "https://github.com/openfin/Notification-Service#readme",
   "dependencies": {
-    "openfin-layouts": "^0.9.2"
+    "openfin-layouts": "0.9.3-alpha.17"
   },
   "devDependencies": {
     "@types/cucumber": "^4.0.1",
@@ -51,7 +51,7 @@
     "fs": "0.0.1-security",
     "genversion": "^2.1.0",
     "gts": "^0.8.0",
-    "hadouken-js-adapter": "^0.35.1-alpha.2",
+    "hadouken-js-adapter": "^0.36.1-alpha.1",
     "jest": "^22.4.2",
     "jest-util": "^23.4.0",
     "mini-css-extract-plugin": "^0.4.1",
