--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "openfin-notifications",
-  "version": "0.9.3",
+  "version": "0.9.4",
   "description": "",
   "main": "dist/client/index.js",
   "types": "dist/client/index.d.ts",
@@ -33,7 +33,7 @@
   },
   "homepage": "https://github.com/openfin/Notification-Service#readme",
   "dependencies": {
-    "openfin-layouts": "0.9.3-alpha.19"
+    "openfin-layouts": "0.9.3"
   },
   "devDependencies": {
     "@types/cucumber": "^4.0.1",
