--- a/package.json
+++ b/package.json
@@ -32,15 +32,13 @@
     "url": "https://github.com/openfin/Notification-Service/issues"
   },
   "homepage": "https://github.com/openfin/Notification-Service#readme",
-  "dependencies": {
-    "openfin-layouts": "0.9.3"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/cucumber": "^4.0.1",
     "@types/jest": "^22.2.0",
     "@types/moment": "^2.13.0",
     "@types/node": "^9.4.6",
-    "@types/openfin": "^34.0.0",
+    "@types/openfin": "^37.0.4",
     "@types/react": "^16.3.12",
     "@types/react-dom": "^16.0.5",
     "copy-webpack-plugin": "^4.5.1",
