[N/A] Aligned build process with layouts service - builds and runs via 'npm install ; npm start', with no additional build scripts.

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,11 @@
-node_modules
-build
-dist
-staging
-src/client/version.ts
-.tmp
-.sass-cache
-bower_components
-logs
-OpenFinRVM.exe
-OpenFin
-/MarketDataPlugin/service/DataProvider/.vs
+.vs
+.vscode
+.DS_STORE
 npm-debug.log
-.vscode/**
-coverage/**
+openfin-notifications-*.tgz
 Thumbs.db
-/.vs
-/built
+
+dist
+gen
+node_modules
+test/coverage
