[N/A] Aligned build process with layouts service (#47)

--- a/package.json
+++ b/package.json
@@ -8,18 +8,11 @@
     "test": "jest",
     "check": "gts check",
     "fix": "gts fix",
-    "clean": "gts clean && rimraf dist staging",
-    "compile": "npm run compile:client && npm run compile:provider",
-    "compile:client": "genversion --es6 --semi src/client/version.ts && tsc -p tsconfig.client.json",
-    "compile:provider": "tsc -p tsconfig.provider.json",
-    "docs": "typedoc --name \"OpenFin Notifications\" --out ./build/docs --excludeNotExported --excludePrivate --excludeProtected --hideGenerator --tsconfig tsconfig.client.json --readme none",
-    "prepare": "npm run compile",
-    "pretest": "npm run compile",
+    "clean": "gts clean",
+    "docs": "typedoc --name \"OpenFin Notifications\" --out ./dist/docs --excludeNotExported --excludePrivate --excludeProtected --hideGenerator --tsconfig src/client/tsconfig.json --readme none",
     "posttest": "npm run check",
-    "package": "webpack --mode production",
-    "package:dev": "webpack --mode development",
-    "build": "npm run compile && npm run package",
-    "build:dev": "npm run compile && npm run package:dev",
+    "build": "webpack --mode production",
+    "build:dev": "webpack --mode development",
     "start": "node server.js"
   },
   "repository": {
@@ -34,7 +27,6 @@
   "homepage": "https://github.com/openfin/Notification-Service#readme",
   "dependencies": {},
   "devDependencies": {
-    "@types/cucumber": "^4.0.1",
     "@types/jest": "^22.2.0",
     "@types/moment": "^2.13.0",
     "@types/node": "^9.4.6",
@@ -43,28 +35,23 @@
     "@types/react-dom": "^16.8.2",
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^1.0.0",
-    "cucumber": "^4.0.0",
     "express": "^4.16.2",
-    "file-loader": "^1.1.11",
-    "fs": "0.0.1-security",
-    "genversion": "^2.1.0",
     "gts": "^0.8.0",
     "hadouken-js-adapter": "^0.36.1-alpha.1",
     "jest": "^22.4.2",
     "jest-util": "^23.4.0",
-    "mini-css-extract-plugin": "^0.4.1",
     "moment": "^2.22.1",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
-    "rimraf": "^2.6.2",
-    "source-map-loader": "^0.2.3",
     "style-loader": "^0.21.0",
     "ts-jest": "^23.10.4",
     "ts-loader": "^4.4.2",
+    "typedoc": "^0.14.2",
     "typescript": "^3.1.1",
     "url-loader": "^1.0.1",
     "webpack": "^4.16.1",
-    "webpack-cli": "^3.0.8"
+    "webpack-cli": "^3.0.8",
+    "webpack-dev-middleware": "^3.6.0"
   },
   "jest": {
     "verbose": true,
