--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^1.0.0",
     "express": "^4.16.2",
+    "file-loader": "^3.0.1",
     "gts": "^0.8.0",
     "hadouken-js-adapter": "^0.36.1-alpha.1",
     "jest": "^22.4.2",
