Fixed tray icon
- Removed tray.html as it did nothing
- Renamed WindowManager to NotificationCenter
- Moved around some of the multiple singleton logic

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "url": "https://github.com/openfin/Notification-Service/issues"
   },
   "homepage": "https://github.com/openfin/Notification-Service#readme",
-  "dependencies": {},
+  "dependencies": {
+  },
   "devDependencies": {
     "@types/jest": "^22.2.0",
     "@types/moment": "^2.13.0",
