--- a/package.json
+++ b/package.json
@@ -25,13 +25,12 @@
     "url": "https://github.com/openfin/Notification-Service/issues"
   },
   "homepage": "https://github.com/openfin/Notification-Service#readme",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/jest": "^22.2.0",
     "@types/moment": "^2.13.0",
     "@types/node": "^9.4.6",
-    "@types/openfin": "^37.0.4",
+    "@types/openfin": "^39.0.1",
     "@types/react": "^16.8.6",
     "@types/react-dom": "^16.8.2",
     "copy-webpack-plugin": "^4.5.1",
