--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "check": "svc-tools check",
     "fix": "svc-tools fix",
     "clean": "rimraf gen dist",
-    "docs": "typedoc --name \"OpenFin Notifications\" --out ./dist/docs --excludeNotExported --excludePrivate --excludeProtected --hideGenerator --tsconfig src/client/tsconfig.json --readme none",
+    "docs": "svc-tools docs",
     "posttest": "npm run check",
     "build": "svc-tools build --mode production",
     "build:dev": "svc-tools build --mode development",
@@ -38,13 +38,10 @@
     "jest": "^22.4.2",
     "jest-util": "^23.4.0",
     "moment": "^2.22.1",
-    "openfin-service-tooling": "^1.0.4",
+    "openfin-service-tooling": "^1.0.7",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
-    "rimraf": "^2.6.3",
     "ts-jest": "^23.10.4",
-    "ts-loader": "^4.4.2",
-    "typedoc": "^0.14.2",
     "typescript": "~3.3.4000"
   },
   "jest": {
