--- a/services.config.json
+++ b/services.config.json
@@ -1,5 +1,6 @@
 {
     "PORT": 3922,
     "SERVICE_NAME": "notifications",
+    "SERVICE_TITLE": "Notifications",
     "CDN_LOCATION": "https://cdn.openfin.co/services/openfin/notifications"
  }
