--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   "types": "dist/client/index.d.ts",
   "scripts": {
     "test": "jest",
-    "check": "gts check",
-    "fix": "gts fix",
-    "clean": "gts clean",
-    "docs": "typedoc --name \"OpenFin Notifications\" --out ./dist/docs --excludeNotExported --excludePrivate --excludeProtected --hideGenerator --tsconfig src/client/tsconfig.json --readme none",
+    "check": "svc-tools check",
+    "fix": "svc-tools fix",
+    "clean": "rimraf gen dist",
+    "docs": "svc-tools docs",
     "posttest": "npm run check",
-    "build": "webpack --mode production",
-    "build:dev": "webpack --mode development",
-    "start": "node server.js"
+    "build": "svc-tools build --mode production",
+    "build:dev": "svc-tools build --mode development",
+    "start": "svc-tools start"
   },
   "repository": {
     "type": "git",
@@ -33,26 +33,16 @@
     "@types/openfin": "^39.0.1",
     "@types/react": "^16.8.6",
     "@types/react-dom": "^16.8.2",
-    "copy-webpack-plugin": "^4.5.1",
-    "css-loader": "^1.0.0",
     "express": "^4.16.2",
-    "file-loader": "^3.0.1",
-    "gts": "^0.8.0",
     "hadouken-js-adapter": "^0.36.1-alpha.1",
     "jest": "^22.4.2",
     "jest-util": "^23.4.0",
     "moment": "^2.22.1",
+    "openfin-service-tooling": "^1.0.7",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
-    "style-loader": "^0.21.0",
     "ts-jest": "^23.10.4",
-    "ts-loader": "^4.4.2",
-    "typedoc": "^0.14.2",
-    "typescript": "^3.1.1",
-    "url-loader": "^1.0.1",
-    "webpack": "^4.16.1",
-    "webpack-cli": "^3.0.8",
-    "webpack-dev-middleware": "^3.6.0"
+    "typescript": "~3.3.4000"
   },
   "jest": {
     "verbose": true,
