[NA] Update package

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "dist/client/index.js",
   "types": "dist/client/index.d.ts",
   "scripts": {
-    "test": "jest",
+    "test:int": "echo 'Integration tests not available yet'",
+    "test:unit": "jest --config jest-unit.config.json",
+    "test": "npm run test:unit && npm run test:int",
     "check": "svc-tools check",
     "fix": "svc-tools fix",
     "clean": "rimraf gen dist",
@@ -35,7 +37,10 @@
     "@types/react-dom": "^16.8.2",
     "express": "^4.16.2",
     "hadouken-js-adapter": "^0.36.1-alpha.1",
-    "jest": "^22.4.2",
+    "jest": "^24.5.0",
+    "jest-cli": "^24.5.0",
+    "jest-environment-node": "^24.5.0",
+    "jest-junit": "^6.3.0",
     "jest-util": "^23.4.0",
     "moment": "^2.22.1",
     "openfin-service-tooling": "^1.0.7",
