[SERVICE-398] Added additional 'npm install' and additional 'channels' npm script. Cleaned-up scripts within package.json.

--- a/package.json
+++ b/package.json
@@ -5,16 +5,18 @@
   "main": "dist/client/index.js",
   "types": "dist/client/index.d.ts",
   "scripts": {
-    "test:int": "echo 'Integration tests not available yet'",
-    "test:unit": "jest --config jest-unit.config.json",
-    "test": "npm run test:unit && npm run test:int",
-    "check": "svc-tools check",
-    "fix": "svc-tools fix",
-    "clean": "rimraf gen dist",
-    "docs": "svc-tools docs",
-    "posttest": "npm run check",
     "build": "svc-tools build --mode production",
     "build:dev": "svc-tools build --mode development",
+    "channels": "svc-tools channels",
+    "check": "svc-tools check",
+    "clean": "rimraf gen dist",
+    "docs": "svc-tools docs",
+    "fix": "svc-tools fix",
+    "posttest": "npm run check",
+    "test": "npm run test:unit && npm run test:int",
+    "test:int": "echo 'Integration tests not available yet'",
+    "test:unit": "jest --config jest-unit.config.json",
+    "zip": "svc-tools zip",
     "start": "svc-tools start"
   },
   "repository": {
