--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "openfin-notifications",
   "version": "0.10.0",
-  "description": "",
-  "main": "dist/client/index.js",
+  "description": "Client library for the Openfin Notifications service",
+  "main": "dist/client/main-bundle.js",
   "types": "dist/client/index.d.ts",
+  "files": [
+    "dist/client"
+  ],
   "scripts": {
     "build": "svc-tools build --mode production",
     "build:dev": "svc-tools build --mode development",
@@ -13,6 +16,7 @@
     "docs": "svc-tools docs",
     "fix": "svc-tools fix",
     "posttest": "npm run check",
+    "prepack": "npm run clean && npm run build && tsc -p src/client/tsconfig.types.json",
     "test": "npm run test:unit && npm run test:int",
     "test:int": "echo 'Integration tests not available yet'",
     "test:unit": "jest --config jest-unit.config.json",
