--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "test:int": "echo 'Integration tests not available yet'",
     "test:unit": "jest --config jest-unit.config.json",
     "zip": "svc-tools zip",
-    "start": "svc-tools start"
+    "start": "svc-tools start",
+    "start:redux": "redux-devtools --open --port=9950"
   },
   "repository": {
     "type": "git",
@@ -41,6 +42,8 @@
     "@types/openfin": "^39.0.1",
     "@types/react": "^16.8.6",
     "@types/react-dom": "^16.8.2",
+    "@types/react-redux": "^7.0.8",
+    "@types/remote-redux-devtools": "^0.5.3",
     "express": "^4.16.2",
     "hadouken-js-adapter": "^0.36.1-alpha.1",
     "jest": "^24.5.0",
@@ -48,11 +51,20 @@
     "jest-environment-node": "^24.5.0",
     "jest-junit": "^6.3.0",
     "jest-util": "^23.4.0",
+    "localforage": "^1.7.3",
     "moment": "^2.22.1",
     "openfin-service-tooling": "^1.0.7",
-    "react": "^16.8.3",
+    "react": "^16.8.6",
     "react-dom": "^16.8.3",
+    "react-redux": "^7.0.2",
+    "redux": "^4.0.1",
+    "redux-devtools-cli": "0.0.1-1",
+    "redux-persist": "^5.10.0",
+    "redux-thunk": "^2.3.0",
+    "remote-redux-devtools": "^0.5.16",
+    "reselect": "^4.0.0",
     "ts-jest": "^23.10.4",
-    "typescript": "~3.3.4000"
+    "typesafe-actions": "^4.1.2",
+    "typescript": "^3.4.5"
   }
 }
