--- a/res/provider/app.json
+++ b/res/provider/app.json
@@ -10,12 +10,13 @@
         "showTaskbarIcon": false,
         "defaultHeight": 400,
         "defaultWidth": 500,
+        "backgroundColor": "#1F1E24",
         "enableAppLogging": true,
         "logManagement": {
             "enabled": true
         }
     },
-    "runtime": {
+   "runtime": {
         "arguments": "--enable-aggressive-domstorage-flushing",
         "version": "10.66.39.43"
     }
