--- a/src/cs-client/OpenFin.Notifications/OpenFin.Notifications.csproj
+++ b/src/cs-client/OpenFin.Notifications/OpenFin.Notifications.csproj
@@ -38,9 +38,8 @@
       <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="OpenfinDesktop, Version=9.0.1.3, Culture=neutral, PublicKeyToken=18a277d64dddd680, processorArchitecture=MSIL">
-      <HintPath>..\packages\OpenfinDesktop.9.0.1-alpha3\lib\net40\OpenfinDesktop.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="OpenfinDesktop, Version=9.0.1.5, Culture=neutral, PublicKeyToken=18a277d64dddd680, processorArchitecture=MSIL">
+      <HintPath>..\packages\OpenfinDesktop.9.0.1\lib\net40\OpenfinDesktop.dll</HintPath>
     </Reference>
     <Reference Include="SuperSocket.ClientEngine, Version=0.9.0.0, Culture=neutral, PublicKeyToken=ee9af13f57f00acc, processorArchitecture=MSIL">
       <HintPath>..\packages\SuperSocket.ClientEngine.Core.0.9.0\lib\net45\SuperSocket.ClientEngine.dll</HintPath>
