First pass of test utils

--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "url": "https://github.com/openfin/Notification-Service/issues"
   },
   "homepage": "https://github.com/openfin/Notification-Service#readme",
-  "dependencies": {},
+  "dependencies": {
+    "@types/puppeteer": "^1.3.0",
+    "puppeteer": "^1.3.0"
+  },
   "devDependencies": {
     "@types/jest": "^22.2.0",
     "@types/moment": "^2.13.0",
