--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@types/node": "^9.4.6",
     "@types/node-fetch": "^2.3.4",
     "@types/openfin": "^39.0.1",
-    "@types/puppeteer": "^1.3.0",
+    "@types/puppeteer": "1.3.0",
     "@types/react": "^16.8.6",
     "@types/react-dom": "^16.8.2",
     "express": "^4.16.2",
@@ -49,7 +49,7 @@
     "moment": "^2.22.1",
     "node-fetch": "^2.6.0",
     "openfin-service-tooling": "^1.0.10",
-    "puppeteer": "^1.3.0",
+    "puppeteer": "1.3.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "typescript": "~3.3.4000"
