--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/remote-redux-devtools": "^0.5.3",
     "express": "^4.16.2",
     "hadouken-js-adapter": "^0.36.1-alpha.1",
+    "inversify": "^5.0.1",
     "jest": "^24.5.0",
     "jest-cli": "^24.5.0",
     "jest-environment-node": "^24.5.0",
