--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-redux": "^7.0.2",
     "redux": "^4.0.1",
     "redux-devtools-cli": "0.0.1-1",
+    "reflect-metadata": "^0.1.13",
     "remote-redux-devtools": "^0.5.16",
     "reselect": "^4.0.0",
     "ts-jest": "^23.10.4",
