--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,8 @@
     "compilerOptions": {
         "outDir": "dist",
         "rootDir": "src",
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true
     },
     "include": [
         "src"
