--- a/package.json
+++ b/package.json
@@ -47,14 +47,14 @@
     "@types/react-redux": "^7.0.8",
     "@types/remote-redux-devtools": "^0.5.3",
     "express": "^4.16.2",
-    "hadouken-js-adapter": "^0.36.1-alpha.1",
-    "mkdirp": "^0.5.1",
+    "hadouken-js-adapter": "^0.39.1",
     "inversify": "^5.0.1",
     "localforage": "^1.7.3",
+    "mkdirp": "^0.5.1",
     "moment": "^2.22.1",
     "node-fetch": "^2.6.0",
-    "puppeteer": "1.3.0",
     "openfin-service-tooling": "1.0.10",
+    "puppeteer": "1.3.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.3",
     "react-redux": "^7.0.2",
