--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "mkdirp": "^0.5.1",
     "moment": "^2.22.1",
     "node-fetch": "^2.6.0",
+    "openfin-service-signal": "^1.0.0",
     "openfin-service-tooling": "1.0.10",
     "puppeteer": "1.3.0",
     "react": "^16.8.6",
