--- a/src/provider/tsconfig.json
+++ b/src/provider/tsconfig.json
@@ -2,7 +2,8 @@
     "extends": "../../tsconfig.json",
     "compilerOptions": {
         "experimentalDecorators": true,
-        "emitDecoratorMetadata": true
+        "emitDecoratorMetadata": true,
+        "preserveConstEnums": true
     },
     "include": [
         "./*.ts"
