--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "moment": "^2.22.1",
     "node-fetch": "^2.6.0",
     "openfin-service-tooling": "1.0.10",
+    "pre-commit": "^1.2.2",
     "puppeteer": "1.3.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.3",
@@ -63,5 +64,10 @@
     "reflect-metadata": "^0.1.13",
     "remote-redux-devtools": "^0.5.16",
     "typescript": "3.4.5"
+  },
+  "precommit": {
+    "run": [
+      "check"
+    ]
   }
 }
