--- a/res/demo/app.json
+++ b/res/demo/app.json
@@ -6,7 +6,7 @@
         "description": "Demo of Openfin Notifications",
         "url": "http://localhost:3922/demo/launcher.html",
         "uuid": "notifications-demo",
-        "autoShow": true,
+        "autoShow": false,
         "saveWindowState": true
     },
     "services": [
