--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dist/client"
   ],
   "scripts": {
-    "build": "svc-tools build --mode production",
+    "build": "rimraf dist && svc-tools build --mode production",
     "build:dev": "svc-tools build --mode development",
     "channels": "svc-tools channels",
     "check": "svc-tools check",
@@ -36,6 +36,7 @@
   "homepage": "https://github.com/openfin/Notification-Service#readme",
   "dependencies": {},
   "devDependencies": {
+    "@types/markdown-it": "0.0.8",
     "@types/mkdirp": "^0.5.2",
     "@types/moment": "^2.13.0",
     "@types/node": "^9.4.6",
@@ -45,21 +46,24 @@
     "@types/react": "^16.8.6",
     "@types/react-dom": "^16.8.2",
     "@types/react-redux": "^7.0.8",
+    "@types/react-transition-group": "^4.2.2",
     "@types/remote-redux-devtools": "^0.5.3",
     "dexie": "^2.0.4",
     "express": "^4.16.2",
     "hadouken-js-adapter": "^0.39.1",
     "inversify": "^5.0.1",
+    "markdown-it": "^9.1.0",
     "mkdirp": "^0.5.1",
     "moment": "^2.22.1",
     "node-fetch": "^2.6.0",
     "openfin-service-signal": "^1.0.0",
-    "openfin-service-tooling": "1.0.12",
+    "openfin-service-tooling": "^1.0.14-alpha.56",
     "pre-commit": "^1.2.2",
     "puppeteer": "1.3.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.3",
     "react-redux": "^7.0.2",
+    "react-transition-group": "^4.2.2",
     "redux": "^4.0.1",
     "redux-devtools-cli": "0.0.1-1",
     "reflect-metadata": "^0.1.13",
