--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dist/client"
   ],
   "scripts": {
-    "build": "rimraf dist && svc-tools build --mode production",
+    "build": "npm run clean && svc-tools build --mode production",
     "build:dev": "svc-tools build --mode development",
     "channels": "svc-tools channels",
     "check": "svc-tools check",
