--- a/res/demo/app.json
+++ b/res/demo/app.json
@@ -16,7 +16,7 @@
         }
     ],
     "runtime": {
-        "arguments": "--v=1 --enable-crash-reporting",
+        "arguments": "--security-realm=of-notifications-service",
         "version": "10.66.39.43"
     },
     "shortcut": {}
