--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@types/node": "^9.4.6",
     "@types/node-fetch": "^2.3.4",
     "@types/openfin": "^43.0.1",
-    "@types/puppeteer": "1.3.0",
+    "@types/puppeteer": "^1.6.4",
     "@types/react": "^16.8.6",
     "@types/react-dom": "^16.8.2",
     "@types/react-redux": "^7.0.8",
@@ -49,7 +49,7 @@
     "dexie": "^2.0.4",
     "express": "^4.16.2",
     "fake-indexeddb": "^2.1.1",
-    "hadouken-js-adapter": "^0.39.1",
+    "hadouken-js-adapter": "^1.43.1",
     "inversify": "^5.0.1",
     "mkdirp": "^0.5.1",
     "moment": "^2.22.1",
@@ -57,7 +57,7 @@
     "openfin-service-signal": "^1.0.0",
     "openfin-service-tooling": "1.0.14",
     "pre-commit": "^1.2.2",
-    "puppeteer": "1.3.0",
+    "puppeteer": "^1.6.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.3",
     "react-redux": "^7.0.2",
