lock puppeteer version

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@types/node": "^9.4.6",
     "@types/node-fetch": "^2.3.4",
     "@types/openfin": "^43.0.1",
-    "@types/puppeteer": "^1.6.4",
+    "@types/puppeteer": "^1.19.1",
     "@types/react": "^16.8.6",
     "@types/react-dom": "^16.8.2",
     "@types/react-redux": "^7.0.8",
@@ -58,7 +58,7 @@
     "openfin-service-signal": "^1.0.0",
     "openfin-service-tooling": "1.0.17",
     "pre-commit": "^1.2.2",
-    "puppeteer": "^1.17.0",
+    "puppeteer": "1.17.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.3",
     "react-redux": "^7.0.2",
