[SERVICE-526] Testing back-fill: Create Notification unit tests [Part 3] (#128)

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/markdown-it": "0.0.8",
     "@types/mkdirp": "^0.5.2",
     "@types/moment": "^2.13.0",
+    "@types/jsdom": "^11.0.4",
     "@types/node": "^9.4.6",
     "@types/node-fetch": "^2.3.4",
     "@types/openfin": "^43.0.1",
@@ -51,12 +52,13 @@
     "fake-indexeddb": "^2.1.1",
     "hadouken-js-adapter": "^1.44.1",
     "inversify": "^5.0.1",
+    "jsdom": "^15.1.1",
     "markdown-it": "^9.1.0",
     "mkdirp": "^0.5.1",
     "moment": "^2.22.1",
     "node-fetch": "^2.6.0",
     "openfin-service-signal": "^1.0.0",
-    "openfin-service-tooling": "1.0.17",
+    "openfin-service-tooling": "1.0.19",
     "pre-commit": "^1.2.2",
     "puppeteer": "1.17.0",
     "react": "^16.8.6",
