--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@types/node": "^9.4.6",
     "@types/node-fetch": "^2.3.4",
     "@types/openfin": "^43.0.1",
-    "@types/puppeteer": "^1.19.1",
+    "@types/puppeteer": "~1.19.1",
     "@types/react": "^16.8.6",
     "@types/react-dom": "^16.8.2",
     "@types/react-redux": "^7.0.8",
