[SERVICE-733] Update linting rules (#148)

--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "moment": "^2.22.1",
     "node-fetch": "^2.6.0",
     "openfin-service-signal": "^1.0.0",
-    "openfin-service-tooling": "1.0.19",
+    "openfin-service-tooling": "1.0.20-alpha.75",
     "pre-commit": "^1.2.2",
     "puppeteer": "1.17.0",
     "react": "^16.8.6",
