--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
   },
   "homepage": "https://github.com/HadoukenIO/notifications-service#readme",
   "devDependencies": {
+    "@types/jsdom": "^11.0.4",
     "@types/markdown-it": "0.0.8",
     "@types/mkdirp": "^0.5.2",
     "@types/moment": "^2.13.0",
-    "@types/jsdom": "^11.0.4",
     "@types/node": "^9.4.6",
     "@types/node-fetch": "^2.3.4",
     "@types/openfin": "^43.0.1",
@@ -59,6 +59,7 @@
     "mkdirp": "^0.5.1",
     "moment": "^2.22.1",
     "node-fetch": "^2.6.0",
+    "openfin-service-config": "^1.0.2",
     "openfin-service-signal": "^1.0.0",
     "openfin-service-tooling": "1.0.21",
     "pre-commit": "^1.2.2",
