[SERVICE-800] Use published async package

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "mkdirp": "^0.5.1",
     "moment": "^2.22.1",
     "node-fetch": "^2.6.0",
+    "openfin-service-async": "^1.0.0",
     "openfin-service-signal": "^1.0.0",
     "openfin-service-tooling": "1.0.22",
     "pre-commit": "^1.2.2",
@@ -73,7 +74,6 @@
     "reflect-metadata": "^0.1.13",
     "semver-compare": "^1.0.0",
     "typescript": "3.4.5",
-    "openfin-async-utils": "../async-utils/dist/openfin-async-utils-0.0.2.tgz"
   },
   "precommit": {
     "run": [
