--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "redux-devtools-cli": "0.0.1-1",
     "reflect-metadata": "^0.1.13",
     "semver-compare": "^1.0.0",
-    "typescript": "^3.7.2"
+    "typescript": "3.4.5"
   },
   "precommit": {
     "run": [
