--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/react": "^16.8.6",
     "@types/react-dom": "^16.8.2",
     "@types/react-redux": "^7.0.8",
+    "@types/react-router-dom": "^5.1.3",
     "@types/react-transition-group": "^4.2.2",
     "@types/semver-compare": "^1.0.0",
     "dexie": "^2.0.4",
@@ -62,12 +63,13 @@
     "node-fetch": "^2.6.0",
     "openfin-service-async": "^1.0.1",
     "openfin-service-signal": "^1.0.0",
-    "openfin-service-tooling": "1.0.22",
+    "openfin-service-tooling": "1.0.24",
     "pre-commit": "^1.2.2",
     "puppeteer": "1.17.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.3",
     "react-redux": "^7.0.2",
+    "react-router-dom": "^5.1.2",
     "react-transition-group": "^4.2.2",
     "redux": "^4.0.1",
     "redux-devtools-cli": "0.0.1-1",
